Upgrade to Helidon 4.0.0-M2